tests-snapshots/dbc-cantools/multiplex_2.snap.stderr
error[E0412]: cannot find type `ExtendedS0Index` in this scope
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:790:36
    |
790 |     pub fn s0(&mut self) -> Result<ExtendedS0Index, CanError> {
    |                                    ^^^^^^^^^^^^^^^
...
898 | pub enum ExtendedS6Index {
    | ------------------------ similarly named enum `ExtendedS6Index` defined here
    |
help: an enum with a similar name exists
    |
790 -     pub fn s0(&mut self) -> Result<ExtendedS0Index, CanError> {
790 +     pub fn s0(&mut self) -> Result<ExtendedS6Index, CanError> {
    |
help: you might be missing a type parameter
    |
668 | impl<ExtendedS0Index> Extended {
    |     +++++++++++++++++

error[E0422]: cannot find struct, variant or union type `ExtendedS0M0` in this scope
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:792:41
    |
792 |             0 => Ok(ExtendedS0Index::M0(ExtendedS0M0 { raw: self.raw })),
    |                                         ^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtendedS6M0`
...
913 | pub struct ExtendedS6M0 {
    | ----------------------- similarly named struct `ExtendedS6M0` defined here

error[E0422]: cannot find struct, variant or union type `ExtendedS0M1` in this scope
    --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:793:41
     |
 793 |             1 => Ok(ExtendedS0Index::M1(ExtendedS0M1 { raw: self.raw })),
     |                                         ^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtendedS6M1`
...
1028 | pub struct ExtendedS6M1 {
     | ----------------------- similarly named struct `ExtendedS6M1` defined here

error[E0422]: cannot find struct, variant or union type `ExtendedS0M2` in this scope
    --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:794:41
     |
 794 |             2 => Ok(ExtendedS0Index::M2(ExtendedS0M2 { raw: self.raw })),
     |                                         ^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtendedS6M2`
...
1143 | pub struct ExtendedS6M2 {
     | ----------------------- similarly named struct `ExtendedS6M2` defined here

error[E0412]: cannot find type `ExtendedS0M0` in this scope
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:824:37
    |
824 |     pub fn set_m0(&mut self, value: ExtendedS0M0) -> Result<(), CanError> {
    |                                     ^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtendedS6M0`
...
913 | pub struct ExtendedS6M0 {
    | ----------------------- similarly named struct `ExtendedS6M0` defined here

error[E0412]: cannot find type `ExtendedS0M1` in this scope
    --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:833:37
     |
 833 |     pub fn set_m1(&mut self, value: ExtendedS0M1) -> Result<(), CanError> {
     |                                     ^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtendedS6M1`
...
1028 | pub struct ExtendedS6M1 {
     | ----------------------- similarly named struct `ExtendedS6M1` defined here

error[E0412]: cannot find type `ExtendedS0M2` in this scope
    --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:842:37
     |
 842 |     pub fn set_m2(&mut self, value: ExtendedS0M2) -> Result<(), CanError> {
     |                                     ^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtendedS6M2`
...
1143 | pub struct ExtendedS6M2 {
     | ----------------------- similarly named struct `ExtendedS6M2` defined here

error: invalid suffix `i32` for float literal
    --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:1269:30
     |
1269 |     pub const S9_MIN: i32 = -1.34_i32;
     |                              ^^^^^^^^ invalid suffix `i32`
     |
     = help: valid suffixes are `f32` and `f64`

error: invalid suffix `i32` for float literal
    --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:1541:21
     |
1541 |         if value < -1.34_i32 || 1235_i32 < value {
     |                     ^^^^^^^^ invalid suffix `i32`
     |
     = help: valid suffixes are `f32` and `f64`

error[E0592]: duplicate definitions with name `set_m0`
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:824:5
    |
750 |     pub fn set_m0(&mut self, value: ExtendedS6M0) -> Result<(), CanError> {
    |     --------------------------------------------------------------------- other definition for `set_m0`
...
824 |     pub fn set_m0(&mut self, value: ExtendedS0M0) -> Result<(), CanError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set_m0`

error[E0592]: duplicate definitions with name `set_m1`
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:833:5
    |
759 |     pub fn set_m1(&mut self, value: ExtendedS6M1) -> Result<(), CanError> {
    |     --------------------------------------------------------------------- other definition for `set_m1`
...
833 |     pub fn set_m1(&mut self, value: ExtendedS0M1) -> Result<(), CanError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set_m1`

error[E0592]: duplicate definitions with name `set_m2`
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:842:5
    |
768 |     pub fn set_m2(&mut self, value: ExtendedS6M2) -> Result<(), CanError> {
    |     --------------------------------------------------------------------- other definition for `set_m2`
...
842 |     pub fn set_m2(&mut self, value: ExtendedS0M2) -> Result<(), CanError> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set_m2`

error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:118:46
    |
118 |                     multiplexor: multiplexor.into(),
    |                                              ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
    = help: the following other types implement trait `From<T>`:
              `u16` implements `From<Char>`
              `u16` implements `From<bool>`
              `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`

error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:414:46
    |
414 |                     multiplexor: multiplexor.into(),
    |                                              ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
    = help: the following other types implement trait `From<T>`:
              `u16` implements `From<Char>`
              `u16` implements `From<bool>`
              `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`

error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:724:46
    |
724 |                     multiplexor: multiplexor.into(),
    |                                              ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
    = help: the following other types implement trait `From<T>`:
              `u16` implements `From<Char>`
              `u16` implements `From<bool>`
              `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`

error[E0433]: failed to resolve: use of undeclared type `ExtendedS0Index`
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:792:21
    |
792 |             0 => Ok(ExtendedS0Index::M0(ExtendedS0M0 { raw: self.raw })),
    |                     ^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtendedS0Index`
    |                     help: an enum with a similar name exists: `ExtendedS6Index`

error[E0433]: failed to resolve: use of undeclared type `ExtendedS0Index`
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:793:21
    |
793 |             1 => Ok(ExtendedS0Index::M1(ExtendedS0M1 { raw: self.raw })),
    |                     ^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtendedS0Index`
    |                     help: an enum with a similar name exists: `ExtendedS6Index`

error[E0433]: failed to resolve: use of undeclared type `ExtendedS0Index`
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:794:21
    |
794 |             2 => Ok(ExtendedS0Index::M2(ExtendedS0M2 { raw: self.raw })),
    |                     ^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtendedS0Index`
    |                     help: an enum with a similar name exists: `ExtendedS6Index`

error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/multiplex_2.snap.rs:798:46
    |
798 |                     multiplexor: multiplexor.into(),
    |                                              ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
    = help: the following other types implement trait `From<T>`:
              `u16` implements `From<Char>`
              `u16` implements `From<bool>`
              `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`
